--- a/proxysql/galera/galera-compose.yml
+++ b/proxysql/galera/galera-compose.yml
@@ -1,56 +1,98 @@
 version: '3.0'
 
 services:
-  mariadb-galera-first:
-    image: 'docker.io/bitnami/mariadb-galera:10.8'
+  # master/bootstrap node
+  mariadb-galera-1:
+    image: docker.io/bitnami/mariadb-galera:10.8
+    restart: always
     ports:
-      - '3307:3306'
-      - '4444:4444'
-      - '4567:4567'
-      - '4568:4568'
+      - '3391:3306'
+      #- '4444:4444'
+      #- '4567:4567'
+      #- '4568:4568'
     volumes:
-      - ./data/db:/bitnami/mariadb
-    environment:
-      - MARIADB_GALERA_CLUSTER_BOOTSTRAP=yes
-      - MARIADB_GALERA_CLUSTER_ADDRESS=yes
-      - MARIADB_GALERA_FORCE_SAFETOBOOTSTRAP=yes
-      - MARIADB_GALERA_CLUSTER_NAME=my_galera
-      - MARIADB_GALERA_MARIABACKUP_USER=mariabackupuser
-      - MARIADB_GALERA_MARIABACKUP_PASSWORD=mariabackuppassword
-      - MARIADB_ROOT_PASSWORD=P4SSW0RD123
-      - MARIADB_USER=admin
-      - MARIADB_PASSWORD=password
-      - MARIADB_DATABASE=my_database
-      - MARIADB_REPLICATION_USER=rep_user
-      - MARIADB_REPLICATION_PASSWORD=P4SSW0RD123
-    healthcheck:
-      test: ['CMD', '/opt/bitnami/scripts/mariadb-galera/healthcheck.sh']
-      interval: 15s
-      timeout: 5s
-      retries: 6
-  mariadb-galera-second:
-    image: 'docker.io/bitnami/mariadb-galera:10.8'
-    ports:
-      - '3308:3306'
-      - '4445:4444'
-      - '4569:4567'
-      - '4570:4568'
-    volumes:
-      - ./data/db2:/bitnami/mariadb
+      - 'mariadb_galera_data_1:/bitnami/mariadb'
     environment:
       # ALLOW_EMPTY_PASSWORD is recommended only for development.
-      # - ALLOW_EMPTY_PASSWORD=yes
-      - MARIADB_GALERA_CLUSTER_NAME=my_galera
-      - MARIADB_GALERA_CLUSTER_ADDRESS=gcomm://mariadb-galera-first:4567,0.0.0.0:4567
-      - MARIADB_GALERA_MARIABACKUP_USER=mariabackupuser
-      - MARIADB_GALERA_MARIABACKUP_PASSWORD=mariabackuppassword
-      - MARIADB_ROOT_PASSWORD=P4SSW0RD123
+      - ALLOW_EMPTY_PASSWORD=yes
+      - MARIADB_GALERA_CLUSTER_NAME=mariadb-cluster
+      - MARIADB_GALERA_CLUSTER_BOOTSTRAP=yes
+      - MARIADB_GALERA_FORCE_SAFETOBOOTSTRAP=yes
+      # MARIADB_GALERA_CLUSTER_ADDRESS point to bootstrap node
+      - MARIADB_GALERA_CLUSTER_ADDRESS=gcomm://mariadb-galera-1:4567,mariadb-galera-2:4567,mariadb-galera-3:4567,0.0.0.0:4567
+      - MARIADB_EXTRA_FLAGS=--max-connect-errors=1000 --max_connections=155
+      - MARIADB_GALERA_MARIABACKUP_USER=mariadb_backup_user
+      - MARIADB_GALERA_MARIABACKUP_PASSWORD=backup_pwd
+      - MARIADB_ROOT_PASSWORD=root_password
       - MARIADB_REPLICATION_USER=rep_user
-      - MARIADB_REPLICATION_PASSWORD=P4SSW0RD123
+      - MARIADB_REPLICATION_PASSWORD=rep_pwd
     healthcheck:
       test: ['CMD', '/opt/bitnami/scripts/mariadb-galera/healthcheck.sh']
       interval: 15s
       timeout: 5s
       retries: 6
-    depends_on:
-      - mariadb-galera-first   
+  # slave node
+  mariadb-galera-2:
+    image: docker.io/bitnami/mariadb-galera:10.8
+    restart: always
+    ports:
+      - '3392:3306'
+      #- '4444:4444'
+      #- '4567:4567'
+      #- '4568:4568'
+    volumes:
+      - 'mariadb_galera_data_2:/bitnami/mariadb'
+    environment:
+      # ALLOW_EMPTY_PASSWORD is recommended only for development.
+      - ALLOW_EMPTY_PASSWORD=yes
+      - MARIADB_GALERA_CLUSTER_NAME=mariadb-cluster
+      #- MARIADB_GALERA_CLUSTER_BOOTSTRAP=yes
+      #- MARIADB_GALERA_FORCE_SAFETOBOOTSTRAP=yes
+      # MARIADB_GALERA_CLUSTER_ADDRESS point to bootstrap node
+      - MARIADB_GALERA_CLUSTER_ADDRESS=gcomm://mariadb-galera-1:4567,mariadb-galera-2:4567,mariadb-galera-3:4567,0.0.0.0:4567
+      - MARIADB_EXTRA_FLAGS=--max-connect-errors=1000 --max_connections=155
+      - MARIADB_GALERA_MARIABACKUP_USER=mariadb_backup_user
+      - MARIADB_GALERA_MARIABACKUP_PASSWORD=backup_pwd
+      - MARIADB_ROOT_PASSWORD=root_password
+      - MARIADB_REPLICATION_USER=rep_user
+      - MARIADB_REPLICATION_PASSWORD=rep_pwd
+    healthcheck:
+      test: ['CMD', '/opt/bitnami/scripts/mariadb-galera/healthcheck.sh']
+      interval: 15s
+      timeout: 5s
+      retries: 6
+  mariadb-galera-3:
+    image: docker.io/bitnami/mariadb-galera:10.8
+    restart: always
+    ports:
+      - '3393:3306'
+      #- '4444:4444'
+      #- '4567:4567'
+      #- '4568:4568'
+    volumes:
+      - 'mariadb_galera_data_3:/bitnami/mariadb'
+    environment:
+      # ALLOW_EMPTY_PASSWORD is recommended only for development.
+      - ALLOW_EMPTY_PASSWORD=yes
+      - MARIADB_GALERA_CLUSTER_NAME=mariadb-cluster
+        # MARIADB_GALERA_CLUSTER_ADDRESS point to bootstrap node
+      - MARIADB_GALERA_CLUSTER_ADDRESS=gcomm://mariadb-galera-1:4567,mariadb-galera-2:4567,mariadb-galera-3:4567,0.0.0.0:4567
+      - MARIADB_EXTRA_FLAGS=--max-connect-errors=1000 --max_connections=155
+      - MARIADB_GALERA_MARIABACKUP_USER=mariadb_backup_user
+      - MARIADB_GALERA_MARIABACKUP_PASSWORD=backup_pwd
+      - MARIADB_ROOT_PASSWORD=root_password
+      - MARIADB_REPLICATION_USER=rep_user
+      - MARIADB_REPLICATION_PASSWORD=rep_pwd
+    healthcheck:
+      test: ['CMD', '/opt/bitnami/scripts/mariadb-galera/healthcheck.sh']
+      interval: 15s
+      timeout: 5s
+      retries: 6
+
+volumes:
+  mariadb_galera_data_1:
+    driver: local
+  mariadb_galera_data_2:
+    driver: local
+  mariadb_galera_data_3:
+    driver: local
